In Progress/Done:
Shipment (screen & PDF):
+ Pre-fill Shipping Notes based on Customer.
+ Fix Shipmnet number auto generation (duplicates).
- Allow to search/filter by Season
- Allow to upload documents.
- Allow to specifiy Shipment Window Date (is it on sale or shipment)?
- Show date, time for transfer.
- Add "Loaded by..." to BOL.
- Sorty by "Progress, Ready, Shipped".
Customer:
+ Allow to enter Special Notes (for shipment).
- Payment terms as dropdown.
- Organize layout (Generic info, Billing info, Shipping info).
Item screen:
- Allow to enter upc for item (manually entered)
- Allow to enter upc for case (manually entered)
Sale:
+ Allow to pick Pay Terms (Same as shipment Ship Terms).
+ Remove FOB.
+ Allow to transfer units from different sale.
- Set pay terms when Customer is set.
Item:
- Allow to search/filter by Season
Global:
- Email notifications based on certain actions.
Production Line:
+ Fix production line
- Allow to finish production even if the units produced are short.














Backlog functionality:
Production:
- Show box with large percentage (On target/slow (based on hours scheduled and units), %Performance/Efficiency, %Production done).
Shipment:
- Persist filter search or show shipment in popup.
Global:
- Keep search options persisted (until page refreshed or logged out).

Backlog tech-dead:
Component entity:
	persist unitsInOrder
	change all int to Long
Item entity:
	remove eager loding
	chage all int to Long
	persist unitsOnStack
Purchase entity:
	persist isReceived
PurchaseComponent entity
	change units to unitsPurchased
	persist unitsReceived	
Receiving entity
	change units to unitsReceived	
SaleItem enitty
	change all int to Long
	change units to unitsSold
Shipment entity
	change totalUnits to unitsShipped
	add to updateUnits methods instead of doing on client.
ShipmentItem entity
	change units to unitsShipped;
